# netfn

./: .dprint.json  Cargo.toml
docs/: interface.md
examples/channel/: Cargo.toml  main.rs
examples/channel/src/: main.rs
examples/http/: Cargo.toml  main.rs
examples/http/api/: v1.rs
examples/http/src/: main.rs
examples/ws/: Cargo.toml
netfn_codegen/: Cargo.toml
netfn_codegen/src/: service.rs
netfn_core/: Cargo.toml
netfn_core/src/: lib.rs
netfn_gen/: Cargo.toml
netfn_gen/src/: lib.rs  service.rs
netfn_macro/: Cargo.toml
netfn_macro/src/: lib.rs
netfn_transport_channel/: Cargo.toml
netfn_transport_channel/src/: lib.rs
netfn_transport_channel_tokio/: Cargo.toml
netfn_transport_channel_tokio/src/: lib.rs
netfn_transport_http/: Cargo.toml
netfn_transport_http/src/: lib.rs
netfn_transport_stream/: Cargo.toml
netfn_transport_stream/src/: lib.rs
netfn_transport_ws/: Cargo.toml
netfn_transport_ws/src/: lib.rs
src/: lib.rs
