[workspace]
members = [
  "netfn_*",
  "examples/*",
]

default-members = [
  "netfn_*",
]

[package]
name = "netfn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netfn_core = { version = "0.1.0", path = "netfn_core" }
netfn_macro = { version = "0.1.0", path = "netfn_macro" }
serde = { version = "1.0.197", features = ["derive"], optional = true }

[features]
serde = ["netfn_macro/serde", "dep:serde"]
