[package]
name = "netfn_codegen"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, optional = true }
syn = { workspace = true, features = ["full", "parsing", "printing", "extra-traits", "visit-mut", "clone-impls"] }

[features]
serde = ["dep:serde"]
