[package]
name = "netfn_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case = "1.0.0"
darling = "0.20.8"
proc-macro2 = "1.0.79"
quote = "1.0.35"
serde = { version = "1.0.197", features = ["derive"], optional = true }
syn = { version = "2.0.55", default-features = false, features = ["full", "parsing", "printing", "extra-traits", "visit-mut", "clone-impls"] }

[features]
serde = ["dep:serde"]
