[package]
name = "netfn_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netfn_gen = { version = "0.1.0", path = "../netfn_gen" }
syn = { version = "2.0.85", default-features = false }

[lib]
proc-macro = true

[features]
serde = ["netfn_gen/serde"]
