[package]
name = "netfn_macro"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netfn_codegen = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true

[features]
serde = ["netfn_codegen/serde"]
