[package]
name = "netfn_transport_channel"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
netfn_core = { workspace = true }
thiserror = { workspace = true }
