[package]
name = "netfn_transport_channel_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netfn_core = { version = "0.1.0", path = "../netfn_core" }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["sync"] }
