[package]
name = "netfn_transport_http"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netfn_core = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
