[package]
name = "netfn_transport_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
cmnsocket = { version = "0.1.0", path = "../../cmnsocket" }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "std"] }
netfn_core = { version = "0.1.0", path = "../netfn_core" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
