[package]
name = "example_http"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
netfn = { workspace = true, features = ["serde"] }
netfn_transport_http = { path = "../../netfn_transport_http" }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
